                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-01-2006 fixed: changed to use libmpeg2 for mpeg1 caused ffmpeg to be used for everything instead in dvdplayer
 - 10-01-2006 fixed: playlists found in subfolders off the music and video playlists locations
			will not be re-cached to the music or video playlist location.
 - 09-01-2006 fixed: Python list controls would crash.
 - 09-01-2006 fixed: Sort order in Filemanager is now by label for the bookmarks.
 - 09-01-2006 fixed: Crash switching from Fullscreen -> GUI.
 - 09-01-2006 fixed: Page up/down controls were rendered incorrectly.
 - 09-01-2006 fixed: [ 1326937 ] Ripping a CD is an idle state for autoshutdown
 - 09-01-2006 fixed: [ 1400055 ] Mute Function doesn't work well.
 - 09-01-2006 fixed: [ 1309067 ] DVD-Player doesn't STOP on Eject Disc
 - 09-01-2006 fixed: Window Animations weren't reset when changing skins.
 - 09-01-2006 fixed: [ 1399055 ] Rarred subs left a progress dialog on screen.
 - 09-01-2006 changed: made dvdplayer use libmpeg2 for decoding mpeg1 video too and added reset code on decoding error
 - 09-01-2006 fixed: [ 1393429 ] If nothings playing volume reports -1 from GetVolume
 - 09-01-2006 changed: edit xbe title truncates to 39 characters so as not to corrupt xbe header
 - 09-01-2006 fixed: video stacking (no longer displays comma seperated file list)
 - 09-01-2006 fixed: [ 1398240 ] Dialog box grammar error.
 - 09-01-2006 changed: No TV mode in LCD doesn't auto-start in My Music anymore.
 - 08-01-2006 fixed: Default python values from references.xml were incorrect for skin version >= 1.85.
 - 08-01-2006 changed: Skin version to v1.90.
                       - includes.xml added.